2002-07-13  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (GtkListStore.tp_as_mapping): explicitly define
	this, as PyType_Ready doesn't seem to inherit special methods from
	secondary bases correctly.
	(GtkTreeStore.tp_as_mapping): same here.

	* gtk/gtk-types.c (PyGdkRectangle_to_value): fix up argument
	ordering bug.

	* gtk/gtk.override (_wrap_gtk_tree_model_tp_as_mapping): move
	these mapping behaviours to the GtkTreeModel wrapper.

	* gtk/gtk-types.c (PyGtkTreeModelRow_Type): rename from
	GtkListStoreRow, and extend so that it can handle setting cells
	for tree stores.

	* build-docs.py (dg): parse template dirs for additional
	documentation.

	* codegen/docgen.py (DocWriter.add_tmpldirs): add function to
	extract docs in the tmpl files.

	* gtk/gtk.override (_wrap_gtk_list_store_tp_getitem): allow
	subscripting of a GtkListStore to get row wrappers.
	(_wrap_gtk_tree_model_get_iter_from_string): add override.

	* gtk/gtk-types.c: add PyGtkListStoreRow type, that represents a
	row in a list store.
	(_pygtk_register_boxed_types): set the ob_type member.

2002-07-12  James Henstridge  <james@daa.com.au>

	These changes help with win32 compat.

	* pygboxed.c (PyGBoxed_Type): set tp_alloc and tp_new to NULL.
	(PyGPointer_Type): same here.

	* gobjectmodule.c (PyGInterface_Type): set tp_alloc and tp_new to
	NULL.
	(initgobject): set tp_new and tp_alloc for various types.

	* pygobject.c (PyGObject_Type): set tp_alloc and tp_new to NULL.

2002-07-10  Murray Cumming  <murrayc@usa.net>

	* codegen/docextract_to_xml.py: Used jamesh's new extract_tmpl()
	function to get the sgml tmpl files. This file is only used by
	gtkmm at the moment, not pygtk itself.

2002-07-10  James Henstridge  <james@daa.com.au>

	* configure.in: increment version number to 1.99.11.

	* codegen/argtypes.py (GdkNativeWindow): add arg type.  This one
	also from Thomas Leonard.

	* gtk/gtk.defs (set_tip): allow tip_private to be NULL, and allow