@@ -1,3 +1,12 @@
+2002-07-15  James Henstridge  <james@daa.com.au>
+
+	* gtk/gtk.override (_wrap_gtk_list_store_tp_iter): iter(liststore)
+	returns a gtk.TreeModelRowIter object.
+
+	* gtk/gtk-types.c (PyGtkTreeModelRowIter_Type): new iterator type
+	that returns a sequence of gtk.TreeModelRow objects for nodes
+	under a particular parent node.
+
 2002-07-13  James Henstridge  <james@daa.com.au>
 
 	* gtk/gtk.override (GtkListStore.tp_as_mapping): explicitly define
